--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "asbuild:untouched": "asc assembly/index.ts -b build/untouched.wasm -t build/untouched.wat --runtime full --validate --debug",
         "asbuild:optimized": "asc assembly/index.ts -b build/optimized.wasm -t build/optimized.wat --runtime full --validate -O3 --noAssert",
         "build:lib": "babel src -d lib",
-        "build:web": "webpack --mode production --entry ./index.js --output ./dist/as-sha256.min.js",
+        "build:web": "webpack --config webpack.config.js",
         "test": "yarn test:as",
         "test:ci": "yarn test:as-ci",
         "test:as": "asp --nortrace --verbose",
