--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
         "test:as-ci": "asp --nortrace 2> /dev/null"
     },
     "dependencies": {
-        "assemblyscript": "https://github.com/AssemblyScript/assemblyscript.git#5b510571f6ebfc5530d85412005059e4cf961a97"
+        "assemblyscript": "https://github.com/AssemblyScript/assemblyscript.git#5b510571f6ebfc5530d85412005059e4cf961a97",
+        "safe-buffer": "^5.2.0"
     },
     "devDependencies": {
         "@as-pect/assembly": "2.3.1",
@@ -41,6 +42,8 @@
         "@babel/cli": "^7.6.0",
         "@babel/core": "^7.6.0",
         "@babel/preset-env": "^7.6.0",
+        "@chainsafe/babel-plugin-inline-binary-import": "^1.0.0",
+        "babel-plugin-inline-import": "^3.0.0",
         "webpack": "^4.39.3",
         "webpack-cli": "^3.3.7"
     }
